# adventofcode-2022

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
src/: argument_handler.rs  config_reader.rs  helper.ts  index.ts  input_reader.rs  main.rs
src/01/: task.ts
src/02/: task.ts
src/03/: task.ts
src/04/: task.ts
src/05/: task.ts
src/06/: task.ts
src/07/: task.ts
src/08/: task.ts
src/09/: task.ts
